[package]
name = "sqlx_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "postgres", "sqlite" ] }
async-std = { version = "1", features = [ "attributes" ] }
futures = "0.3"